2010-08-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/: rework sugar matrix so that operator()(int,int)
	is always used instead of operator[](int)
	
	* inst/include/Rcpp/sugar/matrix/outer.h: new implementation based on 
	LazyVector, so that the value from the vector expression is only 
	retrieved once

2010-08-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/XPtr.h: give default values to tag and prot in XPtr ctor

2010-07-30  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-quickref/* : new vignette Rcpp-quickref: quick reference guide
	to Rcpp API

2010-07-28  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/exp.h: adapt to stricter standards on solaris/suncc

2010-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.5

	* debian/*: Similarly updated for new release to Debian

2010-07-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: faster lhs use of names, only
 	using callback to R if necessary. (discovered while profiling
	RProtoBuf)

	* inst/include/Rcpp/RObject.h : faster lhs and rhs use of
	RObject::slot, using R API functions R_do_slot and R_do_slot_assign

2010-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Small fix which may make Solaris/SunStudio happy

2010-07-16  Romain Francois <romain@r-enthusiasts.com>

	* man/Rcpp-package.Rd : removed old content and point to the
	Rcpp-package vignette for current guidelines.

	* DESCRIPTION: Updated to mention sugar and modules

2010-07-10  Romain Francois <romain@r-enthusiasts.com>

	* src/Makevars: Remove last call to $shell by turning C++0x
	detection off (and into a switch users can edit) which should
	make builds more stable
	* src/Makevars.win: Idem
	* src/cxx0x/cxx0x.R: Detection script deprecated for now

2010-07-10  Romain Francois <romain@r-enthusiasts.com>

	* man/CppClass-class.Rd: changed use of \linkS4Class to suppress a